--- a/src/main/resources/static/resources/html/filterPersons_legacy.html
+++ b/src/main/resources/static/resources/html/filterPersons_legacy.html
@@ -8,18 +8,18 @@
   <meta th:name="_csrf" th:value="${_csrf.token}"/>
   <title>Personen filtern | Adebar</title>
 
-  <link rel="stylesheet" type="text/css" href="../../static/resources/css/bootstrap.min.css"
+  <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css"
         th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-  <link rel="stylesheet" type="text/css" href="../../static/resources/css/style.css"
-        th:href="@{/resources/css/style.css}"/>
-  <link rel="stylesheet" type="text/css" href="../../static/resources/css/formCategories.css"
-        th:href="@{/resources/css/formCategories.css}"/>
-  <link rel="stylesheet" type="text/css" href="../../static/resources/css/filterPersons.css"
-        th:href="@{/resources/css/filterPersons.css}"/>
-  <link rel="stylesheet" href="../../static/resources/css/bootstrap-select.min.css"
-        th:href="@{/resources/css/bootstrap-select.min.css}"/>
+  <link rel="stylesheet" type="text/css" href="../css/style.css"
+        th:href="@{/static/resources/css/style.css}"/>
+  <link rel="stylesheet" type="text/css" href="../css/formCategories.css"
+        th:href="@{/static/resources/css/formCategories.css}"/>
+  <link rel="stylesheet" type="text/css" href="../css/filterPersons.css"
+        th:href="@{/static/resources/css/filterPersons.css}"/>
+  <link rel="stylesheet" href="../css/bootstrap-select.min.css"
+        th:href="@{/static/resources/css/bootstrap-select.min.css}"/>
 
-  <link rel="shortcut icon" th:href="@{/resources/res/favicon.ico}"/>
+  <link rel="shortcut icon" th:href="@{/static/resources/res/favicon.ico}"/>
 </head>
 <body>
 
@@ -374,17 +374,17 @@
 </main>
 <input type="hidden" id="csrf" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 <span class="hidden" id="principal" sec:authentication="principal.associatedPerson"></span>
-<script type="text/javascript" src="../../static/resources/js/jquery.min.js"
+<script type="text/javascript" src="../js/jquery.min.js"
         th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script type="text/javascript" src="../../static/resources/js/bootstrap.min.js"
+<script type="text/javascript" src="../js/bootstrap.min.js"
         th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<script src="../../static/resources/js/bootstrap-select.min.js"
-        th:src="@{/resources/js/bootstrap-select.min.js}"></script>
-<script src="../../static/resources/js/collapse.js" th:src="@{/resources/js/collapse.js}"></script>
-<script src="../../static/resources/js/formControls.js"
-        th:src="@{/resources/js/formControls.js}"></script>
-<script src="../../static/resources/js/init.js" th:src="@{/resources/js/init.js}"></script>
-<script src="../../static/resources/js/filterPersons.js"
-        th:src="@{/resources/js/filterPersons.js}"></script>
+<script src="../js/bootstrap-select.min.js"
+        th:src="@{/static/resources/js/bootstrap-select.min.js}"></script>
+<script src="../js/collapse.js" th:src="@{/static/resources/js/collapse.js}"></script>
+<script src="../js/formControls.js"
+        th:src="@{/static/resources/js/formControls.js}"></script>
+<script src="../js/init.js" th:src="@{/static/resources/js/init.js}"></script>
+<script src="../js/filterPersons.js"
+        th:src="@{/static/resources/js/filterPersons.js}"></script>
 </body>
 </html>
